php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #32937 PHP don't respect trailing slashes in open_basedir
Submitted: 2005-05-04 00:53 UTC Modified: 2005-09-27 17:11 UTC
From: o dot schad at web dot de Assigned:
Status: Closed Package: Safe Mode/open_basedir
PHP Version: 5.0.4 OS: Linux
Private report: No CVE-ID: None
 [2005-05-04 00:53 UTC] o dot schad at web dot de
Description:
------------
If I specify a path for open_basedir in php.ini like 
open_basedir=/t/ 
then I can still open files in /tmp but this shouldn't 
work. 
 
And why the fuck I have to add a trailing slash? This is a 
trap for everyone who don't reads the source code. 
 
I've fixed both issues, if someone is interested in a 
patch contact me, please. 


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-09-27 15:56 UTC] dams@php.net
some more details and a piece of a patch : 

http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=323585
 [2005-09-27 17:11 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC