Fixed bug #32937 (open_basedir looses trailing / in the limiter).

Patch by Adam Conrad